sc3/src/outbound-egress-google-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: outbound-egress-google-dr
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: google
