sc3/src/outbound-oracle-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: www-oracle-com-dr
spec:
  host: www.oracle.com
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 80
        tls:
          mode: SIMPLE # initiates HTTPS when accessing edition.cnn.com
